FEs for the bank by bank too

--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -272,7 +272,7 @@ demographics_check <- felm(business_days ~ 1 +
     cook_pvi + 
     rural +
     estimate_gini_index +
-    county_crime_rate|fips|0|zip, data = most_recent_both)
+    county_crime_rate|0|0|zip, data = most_recent_both)
 
 # Regression 2: Demographics and Loan-Specific
 
@@ -297,7 +297,7 @@ loan_spec_check <- felm(
     national +
     cu +
     bank_ppp_issued + 
-    jobs_reported|fips|0|zip, data = most_recent_both)
+    jobs_reported|0|0|zip, data = most_recent_both)
 
 # Regression 3: economics
 
@@ -327,7 +327,7 @@ econ_check <- felm(
     businesses_per_pop + 
     payroll +
     county_unemployment_rate_apr + 
-    county_unemployment_rate|fips|0|zip, data = most_recent_both)
+    county_unemployment_rate|0|0|zip, data = most_recent_both)
 
 # Regression 4: COVID 
 
@@ -365,7 +365,7 @@ covid_check <- felm(
     stay_at_home_apr + 
     stay_at_home_current + 
     non_essential_closure_apr + 
-    non_essential_closure_current|fips|0|zip,
+    non_essential_closure_current|0|0|zip,
   data = most_recent_both)
 
 # Regression 5: interactions
@@ -410,7 +410,7 @@ interactions_check <- felm(
     I(minority_percent * cook_pvi) +
     I(minority_percent * rural) + 
     I(minority_percent * estimate_gini_index) +
-    I(minority_percent * county_crime_rate)|fips|0|zip,
+    I(minority_percent * county_crime_rate)|0|0|zip,
   data = most_recent_both)
 ```
 
