--- a/10_bankbybank_FE.Rmd
+++ b/10_bankbybank_FE.Rmd
@@ -71,6 +71,8 @@ most_recent <- readRDS('most_recent_zip_1117.rds') %>%
 #                                           "jpmorgan chase bank, national association",
 #                                           "wells fargo bank, national association"),
 #                                       1, 0))
+
+most_recent_both <- readRDS(') %>%
 ```
 
 ```{r}
